--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "aidbox-react",
+    "name": "fhir-react",
     "version": "1.7.0",
     "scripts": {
         "build": "tsc & rollup -c",
@@ -23,6 +23,7 @@
         "@rollup/plugin-typescript": "^10.0.1",
         "@testing-library/react": "^9.4.0",
         "@testing-library/react-hooks": "^3.2.1",
+        "@types/fhir": "^0.0.36",
         "@types/jest": "^24.0.25",
         "@types/lodash.isplainobject": "^4.0.6",
         "@types/lodash.uniq": "^4.5.6",
