--- a/package.json
+++ b/package.json
@@ -2,64 +2,45 @@
     "name": "fhir-react",
     "version": "1.7.0",
     "scripts": {
-        "build": "tsc & rollup -c",
-        "prebuild": "rimraf lib/* & rimraf dist/*",
+        "build": "tsc",
         "coverage": "jest --config=./jest.config.json --coverage --coverageReporters=text-lcov | coveralls",
         "test": "jest --config=./jest.config.json",
         "test:watch": "jest --config=./jest.config.json --watch",
-        "prepare": "npm run build"
+        "prepare": "husky install"
     },
     "dependencies": {
+        "@beda.software/remote-data": "^1.0.0",
         "axios": "^0.21.2",
         "moment": "^2.29.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.20.5",
-        "@babel/preset-env": "^7.20.2",
-        "@babel/preset-typescript": "^7.18.6",
-        "@react-native-community/eslint-config": "^2.0.0",
-        "@rollup/plugin-commonjs": "^23.0.4",
-        "@rollup/plugin-node-resolve": "^15.0.1",
-        "@rollup/plugin-typescript": "^10.0.1",
         "@testing-library/react": "^9.4.0",
         "@testing-library/react-hooks": "^3.2.1",
-        "@types/fhir": "^0.0.36",
-        "@types/jest": "^24.0.25",
+        "@types/fhir": "^0.0.40",
+        "@types/jest": "^29.5.11",
         "@types/lodash.isplainobject": "^4.0.6",
         "@types/lodash.uniq": "^4.5.6",
-        "@typescript-eslint/eslint-plugin": "^4.9.0",
-        "@typescript-eslint/parser": "^4.9.0",
+        "@typescript-eslint/eslint-plugin": "^6.13.2",
+        "@typescript-eslint/parser": "^6.13.2",
         "coveralls": "^3.0.9",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.14.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-prettier": "^3.1.4",
-        "husky": "^4.2.0",
-        "jest": "^24.9.0",
-        "lint-staged": "^10.0.2",
-        "prettier": "^1.19.1",
+        "eslint": "^8.55.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.0",
+        "husky": "^8.0.3",
+        "jest": "^29.7.0",
+        "lint-staged": "^15.2.0",
+        "prettier": "^3.1.0",
         "react": "^16.12.0",
         "react-test-renderer": "^16.12.0",
-        "rimraf": "^3.0.2",
-        "rollup": "^3.7.4",
-        "rollup-plugin-dts": "^5.0.0",
-        "ts-jest": "^24.3.0",
+        "ts-jest": "^29.1.1",
         "tslib": "^2.4.1",
         "typescript": "^4.9.4"
     },
-    "main": "dist/cjs/index.js",
-    "module": "dist/esm/index.js",
+    "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
-        "dist/**/*",
-        "lib/**/*",
-        "src/**/*"
+        "dist/**/*"
     ],
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
-    },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": "eslint --fix",
         "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
