--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,23 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
-        "lib": ["dom", "es2015", "es2016", "es2017"],
+        "target": "ES2016",
+        "module": "Node16",
+        "moduleResolution": "Node16",
+        "lib": ["dom", "es2017"],
         "baseUrl": "./src",
         "sourceMap": true,
-        "outDir": "./lib",
+        "inlineSources": true,
+        "outDir": "./dist",
         "declaration": true,
+        "declarationMap": true,
         "allowJs": true,
         "jsx": "react",
-        "moduleResolution": "node",
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
         "noImplicitAny": true,
         "importHelpers": true,
         "strictNullChecks": true,
-        "suppressImplicitAnyIndexErrors": true,
         "noUnusedLocals": true,
         "experimentalDecorators": true,
         "skipLibCheck": true,
@@ -28,5 +29,4 @@
         "noEmit": false
     },
     "include": ["src"],
-    "exclude": ["node_modules", "tests", "typings"]
 }
