Add typecheck script

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,6 @@
 {
+    "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "target": "ES2016",
-        "module": "Node16",
-        "moduleResolution": "Node16",
-        "lib": ["dom", "es2017"],
-        "baseUrl": "./src",
-        "sourceMap": true,
-        "inlineSources": true,
-        "outDir": "./dist",
-        "declaration": true,
-        "declarationMap": true,
-        "allowJs": true,
-        "jsx": "react",
-        "forceConsistentCasingInFileNames": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noImplicitAny": true,
-        "importHelpers": true,
-        "strictNullChecks": true,
-        "noUnusedLocals": true,
-        "experimentalDecorators": true,
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "strict": true,
-        "resolveJsonModule": true,
-        "isolatedModules": true,
         "noEmit": false
-    },
-    "include": ["src"],
+    }
 }
