--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "coverage": "jest --config=./jest.config.json --coverage --coverageReporters=text-lcov | coveralls",
         "test": "jest --config=./jest.config.json",
         "test:watch": "jest --config=./jest.config.json --watch",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "typecheck": "tsc -p tsconfig.base.json"
     },
     "dependencies": {
         "@beda.software/remote-data": "^1.0.0",
         "axios": "^0.21.2",
+        "lodash": "^4.17.21",
         "moment": "^2.29.1"
     },
     "devDependencies": {
@@ -18,8 +20,7 @@
         "@testing-library/react-hooks": "^3.2.1",
         "@types/fhir": "^0.0.40",
         "@types/jest": "^29.5.11",
-        "@types/lodash.isplainobject": "^4.0.6",
-        "@types/lodash.uniq": "^4.5.6",
+        "@types/lodash": "^4.14.202",
         "@typescript-eslint/eslint-plugin": "^6.13.2",
         "@typescript-eslint/parser": "^6.13.2",
         "coveralls": "^3.0.9",
@@ -33,8 +34,8 @@
         "react": "^16.12.0",
         "react-test-renderer": "^16.12.0",
         "ts-jest": "^29.1.1",
-        "tslib": "^2.4.1",
-        "typescript": "^4.9.4"
+        "tslib": "^2.6.2",
+        "typescript": "^5.3.2"
     },
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
