--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
         "eslint-plugin-jest": "^27.6.0",
         "husky": "^8.0.3",
         "jest": "^29.7.0",
-        "lint-staged": "^15.2.0",
         "prettier": "^3.1.0",
         "react": "^16.12.0",
         "react-test-renderer": "^16.12.0",
         "ts-jest": "^29.1.1",
         "tslib": "^2.6.2",
         "typescript": "^5.3.2"
+    },
+    "optionalDependencies": {
+        "lint-staged": "^15.2.0"
     },
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
