--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,6 +10,7 @@
         "outDir": "./dist",
         "declaration": true,
         "declarationMap": true,
+        "declarationDir": "./dist/types",
         "allowJs": true,
         "jsx": "react",
         "forceConsistentCasingInFileNames": true,
