--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,9 +12,9 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
       - name: clean install dependencies
-        run: npm ci
+        run: yarn install
       - name: build package
-        run: npm run build
+        run: yarn build
       - name: publishing
         run: npm publish --access public
         env:
