--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "name": "@beda.software/fhir-react",
     "version": "1.7.0",
-    "keywords": ["fhir"],
+    "keywords": [
+        "fhir"
+    ],
     "scripts": {
         "build": "tsc",
         "coverage": "jest --config=./jest.config.json --coverage --coverageReporters=text-lcov | coveralls",
