--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "fhir"
     ],
     "scripts": {
-        "build": "tsc",
+        "build": "rollup --config",
         "coverage": "jest --config=./jest.config.json --coverage --coverageReporters=text-lcov | coveralls",
         "test": "jest --config=./jest.config.json",
         "test:watch": "jest --config=./jest.config.json --watch",
@@ -19,6 +19,9 @@
         "moment": "^2.29.1"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-typescript": "^11.1.6",
         "@testing-library/react": "^9.4.0",
         "@testing-library/react-hooks": "^3.2.1",
         "@types/fhir": "^0.0.40",
@@ -36,6 +39,8 @@
         "prettier": "^3.1.0",
         "react": "^16.12.0",
         "react-test-renderer": "^16.12.0",
+        "rollup": "^4.9.4",
+        "rollup-plugin-dts": "^6.1.0",
         "ts-jest": "^29.1.1",
         "tslib": "^2.6.2",
         "typescript": "^5.3.2"
@@ -43,7 +48,8 @@
     "optionalDependencies": {
         "lint-staged": "^15.2.0"
     },
-    "main": "dist/index.js",
+    "main": "dist/cjs/bundle.js",
+    "module": "dist/esm/bundle.js",
     "types": "dist/index.d.ts",
     "files": [
         "dist/**/*"
