--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "husky": "^8.0.3",
         "jest": "^29.7.0",
         "prettier": "^3.1.0",
+        "react": "^16.12.0",
         "react-test-renderer": "^16.12.0",
         "rollup": "^4.9.4",
         "rollup-plugin-dts": "^6.1.0",
@@ -46,9 +47,6 @@
     },
     "optionalDependencies": {
         "lint-staged": "^15.2.0"
-    },
-    "peerDependencies": {
-        "react": ">=16.12.0"
     },
     "main": "dist/cjs/bundle.js",
     "module": "dist/esm/bundle.js",
