--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "module": "dist/esm/bundle.js",
     "types": "dist/index.d.ts",
     "files": [
-        "dist/**/*"
+        "dist/**/*",
+        "src/**/*"
     ],
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": "eslint --fix",
