Revert "Mark React as external library in rollup config"
This reverts commit efa23b017e7dccfc12283151a8442fcc5a0879c0.

--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "module": "dist/esm/bundle.js",
     "types": "dist/index.d.ts",
     "files": [
-        "dist/**/*",
-        "src/**/*"
+        "dist/**/*"
     ],
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": "eslint --fix",
