--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@beda.software/fhir-react",
-    "version": "1.9.1-0",
+    "version": "1.9.1",
     "keywords": [
         "fhir"
     ],
